// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table students {
  id integer [primary key]
  stdnt_first_name text
  stdnt_middle_name text
  stdnt_last_name text
  stdnt_rank varchar
  supervision_id integer
  phase integer
  created_at timestamp
}



Table users {
  id integer [primary key]
  username varchar
  role_id integer 
  squadron varchar
  first_name text
  middle_name text
  last_name text
  grade varchar
  created_at timestamp
}

Table organization {
  id integer [primary key]
  squadron varchar // need to figure out how things will be connected
  supervision_id integer
  created_at timestamp
}

Table form { 
  id integer [primary key]
  event_id varchar //dicatate ids types (disc/excel/appntmnt/other)
  comments varchar
  created_at timestamp
}

Table phase {
  phase integer
  phase_info varchar
}

Table role {
  role_id integer // student/priorserv/leadership/instructor/mtl
  role_name varchar
}


Ref: users.id < students.id

Ref: form.id < students.id

Ref: organization.id < users.id

Ref: users.role_id < role.role_id

Ref: phase.phase < students.phase

